<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dip" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	        
            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10sp"
	            android:textSize="30sp"
	            android:text="@string/analysis_title" />
            
            <TextView 
                android:id="@+id/calc_displ"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_displ" />
            <TextView 
                android:id="@+id/gmt"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/gmt" />
            <TextView 
                android:id="@+id/kmt"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/kmt" />
            <TextView 
                android:id="@+id/kg"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/kg" />
            
            <Button 
		        android:id="@+id/import_hydrostatics_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/import_hydrostatics_label"
		        android:layout_marginTop="20dip"
		        android:layout_gravity="center_horizontal" />"
            <Button 
		        android:id="@+id/analyze_button"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/analyze_label"
		        android:layout_marginTop="20dip"
		        android:layout_gravity="center_horizontal" />"
            
	    </LinearLayout>
    </ScrollView>
</LinearLayout>