<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="30dip" >
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" 
    	android:layout_gravity="center" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/main_title"
	        android:layout_gravity="center"
	        android:layout_marginBottom="25dip"
	        android:textSize="24.5sp" />
	    <Button 
	        android:id="@+id/new_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/new_boat_label" />
	    <Button 
	        android:id="@+id/load_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/load_boat_label" />
	    <Button 
	        android:id="@+id/import_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/import_label" />
	    <Button 
	        android:id="@+id/export_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/export_label" />
    
    </LinearLayout>

</LinearLayout>