<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="95dp" >

	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" >

	                <TextView
	                    android:id="@+id/curAngle_output"
	                    android:layout_width="128dp"
	                    android:layout_height="wrap_content"
	                    android:gravity="center"
	                    android:padding="10sp" />

	                <TextView
	                    android:id="@+id/curAngle_output1"
	                    android:layout_width="112dp"
	                    android:layout_height="wrap_content"
	                    android:gravity="center"
	                    android:padding="10sp" />

	            </LinearLayout>
	        </LinearLayout>

		    <TableLayout 
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_gravity="center" >
		        <TableRow>
		            <Button
		                android:id="@+id/condA_button"
		                android:text="@string/condA_label" />
		            <Button
		                android:id="@+id/condB_button"
		                android:text="@string/condB_label" />
		            <Button
		                android:id="@+id/condC_button"
		                android:text="@string/condC_label" />
		        </TableRow>
		        <TableRow>
		            <TextView
		                android:id="@+id/condA_output"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content" />
		            <TextView
		                android:id="@+id/condB_output"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content" />
		            <TextView
		                android:id="@+id/condC_output"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content" />
		        </TableRow>
		        <TableRow>
		            <Button
		                android:id="@+id/condD_button"
		                android:text="@string/condD_label" />
		            <Button
		                android:id="@+id/condE_button"
		                android:text="@string/condE_label" />
		            <Button
		                android:id="@+id/condF_button"
		                android:text="@string/condF_label" />
		        </TableRow>
		        <TableRow>
		            <TextView
			        	android:layout_width="fill_parent"
			        	android:layout_height="wrap_content"
			        	android:id="@+id/condD_output" />
		            <TextView
			        	android:layout_width="fill_parent"
			        	android:layout_height="wrap_content"
			        	android:id="@+id/condE_output" />
		            <TextView
			        	android:layout_width="fill_parent"
			        	android:layout_height="wrap_content"
			        	android:id="@+id/condF_output" />
		        </TableRow>
		        <TableRow>
		            <Button
		                android:id="@+id/condG_button"
		                android:text="@string/condG_label" />
		            <Button
		                android:id="@+id/condH_button"
		                android:text="@string/condH_label" />
		            <Button
		                android:id="@+id/condI_button"
		                android:text="@string/condI_label" />
		        </TableRow>
		        <TableRow>
		            <TextView
			        	android:layout_width="fill_parent"
			        	android:layout_height="wrap_content"
			        	android:id="@+id/condG_output" />
		            <TextView
			        	android:layout_width="fill_parent"
			        	android:layout_height="wrap_content"
			        	android:id="@+id/condH_output" />
		            <TextView
		                android:id="@+id/condI_output"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content" />
		        </TableRow>
		    </TableLayout>
		    <SeekBar
		        android:id="@+id/alpha_bar"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="10sp"
		        android:max="100"
		        android:progress="80"/>
		    <TextView
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:id="@+id/alpha_value" />
		    <TableLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:paddingTop="15dip" >
		        <TableRow >
		            <TextView
			        	android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:text="@string/exp_description_left" />

		            <TextView
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:gravity="right"
		                android:text="@string/exp_description_right" />

		        </TableRow>
		    </TableLayout>
		    
	    </LinearLayout>
    </ScrollView>
    
</LinearLayout>