<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="30dip" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	        
            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingBottom="10sp"
	            android:textSize="30sp"
	            android:text="@string/drafts_title"
	            android:id="@+id/drafts_title" />
            
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/fwdpt_draft" />
	        <EditText 
	            android:id="@+id/fwdpt_draft"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number|numberDecimal" />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/fwdstbd_draft" />
	        <EditText 
	            android:id="@+id/fwdstbd_draft"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number|numberDecimal" />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/midpt_draft" />
	        <EditText 
	            android:id="@+id/midpt_draft"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number|numberDecimal" />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/midstbd_draft" />
	        <EditText 
	            android:id="@+id/midstbd_draft"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number|numberDecimal" />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/aftpt_draft" />
	        <EditText 
	            android:id="@+id/aftpt_draft"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number|numberDecimal" />
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/aftstbd_draft" />
	        <EditText 
	            android:id="@+id/aftstbd_draft"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number|numberDecimal" />
	        
	        
	        </LinearLayout>
    </ScrollView>
</LinearLayout>